@@ -3,8 +3,9 @@
 	* gtksourceview/gtksourcecontextengine.c: fixed update_syntax()
 	return value and invalidating end of batch in case when the batch
 	was not enough.
-	Made text_inserted and text_deleted use hint better, and set/unset it
+	Made text_inserted() and text_deleted() use hint better, and set/unset it
 	as appropriate.
+	Made find_insertion_place() use hint.
 
 2006-07-16  Yevgen Muntyan  <muntyan@tamu.edu>
 
